# fairest

./: .gitignore  LICENSE  README.rst  pyproject.toml
fairest/: __init__.py  hook_specs.py  main.py
fairest/core/: logging.py  modelling.py  nlp.py  plugins.py  reporting.py  rules.py  settings.py
fairest/models/: DocumentModel.py  Report.py  Request.py  Response.py  Rule.py  __init__.py
fairest/plugins_core/: BasicDOCX.py  BasicText.py  DocumentStatisticsRule.py  SentenceLengthRule.py  __init__.py
tests/: Service Agreement.docx  test_BasicDOCX.py  test_BasicText.py  test_DocumentStatisticsRule.py  test_Response.py  test_Rule.py  test_SentenceLengthRule.py  test_fairest.py  test_main.py  test_modelling.py  test_models.py  test_plugins.py  test_reporting.py  test_rules.py  test_settings.py
